/*
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 *   http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing,
 * software distributed under the License is distributed on an
 * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
 * KIND, either express or implied.  See the License for the
 * specific language governing permissions and limitations
 * under the License.
 */
syntax = "proto2";
package org.acme.deals;
import "kogito-index.proto";
import "kogito-types.proto";
option kogito_model = "Deals";
option kogito_id = "deals";

/* @Indexed */
message Location {
    option java_package = "org.acme.deals";
    /* @Field(index = Index.NO, store = Store.YES) @SortableField */
    optional string city = 1;
    /* @Field(index = Index.NO, store = Store.YES) @SortableField */
    optional string country = 2;
    /* @Field(index = Index.NO, store = Store.YES) @SortableField */
    optional string street = 3;
    /* @Field(index = Index.NO, store = Store.YES) @SortableField */
    optional string zipCode = 4;
}

/* @Indexed */
message Deals {
    option java_package = "org.acme.deals";
    /* @Field(index = Index.YES, store = Store.YES) @SortableField */
    optional string id = 1;
    /* @Field(index = Index.NO, store = Store.YES) @SortableField */
    optional string name = 2;
    /* @Field(index = Index.NO, store = Store.YES) @SortableField */
    optional string review = 3;
    optional Product product = 4;
    /* @Field(index = Index.NO, store = Store.YES) */
    optional org.kie.kogito.index.model.KogitoMetadata metadata = 5;
}

/* @Indexed */
message Product {
    option java_package = "org.acme.deals";
    optional Location location = 1;
    /* @Field(index = Index.NO, store = Store.YES) @SortableField */
    optional string name = 2;
    /* @Field(index = Index.NO, store = Store.YES) @SortableField */
    optional string code = 3;
    /* @Field(index = Index.NO, store = Store.YES) @SortableField */
    optional string label = 4;
    /* @Field(index = Index.NO, store = Store.YES) @SortableField */
    optional double price = 5;
}
